# Memory-Leak-Detector

./: CMakeLists.txt
app/: CMakeLists.txt  app.c
include/: mld.h
src/: CMakeLists.txt  mld.c
